--- a/src/styles/_SavedWorkouts.scss
+++ b/src/styles/_SavedWorkouts.scss
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
+    width: 15%;
     padding: 20px;
     border: 1px solid black;
-    height: 100vh;
+    height: 800px;
+    
 
 
 }
