--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
 
-$font-title:'Roboto Slab', serif;
+$font-title:'Bungee Outline', serif;
 $font-headers: 'Roboto Slab', serif;
 $font-text: sans-serif;
 
-$color-light-blue: #A5F4EB;
+$color-blue: #0A62D0;
+$color-orange: #ea6227;
+$color-yellow: #F3D849;
+$color-red: rgb(177, 41, 41);
+$color-mint: #b9ebcc;
+$color-black: #191718;
+$color-text-white: #F5F7F7;
+$color-gray: #E0E5E9;
