--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Bungee+Shade&family=Faster+One&display=swap');
 
-$font-title:'Bungee Outline', serif;
+
+$font-title: 'Bungee Outline', serif;
 $font-headers: 'Roboto Slab', serif;
 $font-text: sans-serif;
 
