added some date login and coditional formatting for the dates

--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -1,3 +1,15 @@
+.past-date{
+    background-color: gray;
+}
+
+.current-date{
+    background-color: blue;
+}
+
+.future-date{
+    background-color: white;
+}
+
 #planner{
     width: 85%;
     border: 1px solid black;
