--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -1,51 +1,60 @@
-.past-date{
-    background-color: gray;
+.past-date {
+  background-color: gray;
 }
 
-.current-date{
-    background-color: blue;
+.current-date {
+  background-color: blue;
 }
 
-.future-date{
-    background-color: white;
+.future-date {
+  background-color: white;
 }
 
-#planner{
-    width: 85%;
-    border: 1px solid black;
+
+#planner {
+  width: 85%;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 600px;
+
+  #planner-header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      button{
+          width: 25px;
+          height: 25px;
+          
+      }
+  }
+
+  .time-period-title {
+    padding: 20px;
+  }
+
+  #planner-days {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 600px;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 
-    .time-period-title{
-        padding: 20px;
-    }
+    .planner-day {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 14%;
 
-    #planner-days{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+      h3 {
+        padding-bottom: 1rem;
+      }
+
+      .planner-workouts-container {
         width: 100%;
-
-        .planner-day{
-            display:flex;
-            flex-direction: column;
-            align-items: center;
-            width: 14%;
-
-            h3{
-                padding-bottom: 1rem;
-            }
-
-            .planner-workouts-container{
-                width: 100%;
-                border: 1px solid black;
-
-            }
-
-        }
+        border: 1px solid black;
+      }
     }
-
-
+  }
 }
