--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,10 +1,11 @@
 body {
-    background-color: $color-gray;
+    background-color: $color-background;
     color: $color-black;
     transition: background-color 1s ease;
     transition: color 0.5s ease;
     font-family: $font-text
-  
+
+
   }
   
   h1 {
@@ -13,7 +14,7 @@ body {
     letter-spacing: .1rem;
     font-size: 5rem;
     line-height: 1.2;
-    color: $color-mint;
+    color: $color-white;
   }
   
   h2 {
