--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,5 +12,10 @@ $color-yellow: #F3D849;
 $color-red: rgb(177, 41, 41);
 $color-mint: #b9ebcc;
 $color-black: #191718;
-$color-text-white: #F5F7F7;
+$color-white: #F5F7F7;
 $color-gray: #E0E5E9;
+$color-hot-pink: #FD3972;
+
+$color-text: $color-black;
+$color-background: $color-white;
+$color-header: $color-hot-pink;
