some more color formatting

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,10 +6,9 @@ $font-title: 'Bungee Outline', serif;
 $font-headers: 'Roboto Slab', serif;
 $font-text: sans-serif;
 
-$color-blue: #0A62D0;
+$color-blue: #235789;
 $color-orange: #ea6227;
 $color-yellow: #F3D849;
-$color-red: rgb(177, 41, 41);
 $color-mint: #b9ebcc;
 $color-black: #191718;
 $color-white: #F5F7F7;
