--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -1,14 +1,30 @@
 .past-date {
-  background-color: gray;
+  .planner-workouts-container{
+
+    background-color: gray;
+  }
 }
 
 .current-date {
-  border: 3px solid blue;
-  background-color: white;
+  
+  .planner-day-title{
+    background-color: $color-hot-pink;
+    padding: 0 10px;
+    border-radius: 15px;
+    color: white;
+  }
+  .planner-workouts-container{
+
+    background-color: white;
+  }
+
 }
 
 .future-date {
-  background-color: white;
+  .planner-workouts-container{
+
+    background-color: white;
+  }
 }
 
 
@@ -47,6 +63,11 @@
       flex-direction: column;
       align-items: center;
       width: 14%;
+
+      .planner-day-title {
+        padding: 1rem;
+        margin: 1rem;
+      }
 
       h3 {
         padding-bottom: 1rem;
