--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -26,7 +26,6 @@ body {
   h3{
     font-family: $font-headers;
     font-size: 2rem;
-    color: var(--ajw-blue);
   }
   
   h4 {
@@ -47,21 +46,14 @@ body {
     color: inherit;
   }
   
-  i {
-    font-size: 2.2rem;
-    cursor: pointer;
-  }
-  
-  p a {
-   color: var(--ajw-blue); 
-  }
-  
-  p a:hover{
-    color: var(--color-button-hover)
-  }
-
   .main-container{
       display: flex;
       flex-direction: row;
+
+  }
+
+  button{
+    background-color: $color-blue;
+    color: white;
 
   }
