--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Bungee+Shade&family=Faster+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 $font-title: 'Bungee Outline', serif;
-$font-headers: 'Roboto Slab', serif;
-$font-text: sans-serif;
+$font-headers: 'Poppins', serif;
+$font-text: 'Poppins', serif;
 
-$color-blue: #235789;
+$color-blue: #39ABFD;
 $color-orange: #ea6227;
 $color-yellow: #F3D849;
 $color-mint: #b9ebcc;
@@ -17,4 +16,4 @@ $color-hot-pink: #FD3972;
 
 $color-text: $color-black;
 $color-background: $color-white;
-$color-header: $color-hot-pink;
+$color-header: $color-blue;
