--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,4 +16,4 @@ $color-hot-pink: #FD3972;
 
 $color-text: $color-black;
 $color-background: $color-white;
-$color-header: $color-blue;
+$color-header: $color-hot-pink;
