--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -29,38 +29,57 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 600px;
-
+  overflow: scroll;
+  overflow-y: hidden;
+  
   .planner-header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 15px;
+    width: 100%;
 
-    .time-period-title {
+    .create-workout{
+      margin: 10px;
+    }
+    .time-period {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 10px;
 
-      
       h2{
-        margin: 0 0.5rem;
+        padding: 10px;
       }
     }
+    .increment-arrows {
+      display: flex;
+      flex-direction: row;
+      margin: 10px;
 
-    .inc-arrow {
-      font-size: 3rem;
-      margin: 1px;
-      color: $color-hot-pink;
+      .inc-arrow {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        color: white;
+        background-color: $color-blue;
+        padding: 7px;
+        border-radius: 10px;
+        margin: 2px;
 
-      &:hover {
-        opacity: 75%;
+        &:focus {
+          outline: none;
+        }
+
+        &:hover {
+          opacity: 75%;
+        }
       }
     }
-  }
-
-  .time-period-title {
-    padding: 20px;
   }
 
   #planner-days {
@@ -77,7 +96,7 @@
 
       .planner-day-title {
         padding: 1rem;
-        margin: 1rem;
+        margin: 1rem 0;
       }
 
       h3 {
