--- a/src/styles/_PlannerWorkout.scss
+++ b/src/styles/_PlannerWorkout.scss
@@ -3,13 +3,25 @@
     flex-direction: column;
     border: 1px solid black;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
     margin: 5px;
 
     h4{
-        
+        padding: 0 .5rem;
+        border-bottom: 1px solid black;
     }
 
+    p{
 
+        padding: .5rem;
+    }
 
+.sets {
+    padding: 0 0.5rem;
+}
+
+}
+
+.generic {
+    border: none;
 }
