--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './reset.scss';
 @import './variables.scss';
 @import './general.scss';
+@import './_Categories.scss';
 @import './Header';
 @import './SavedWorkouts';
 @import './Planner';
