created the AddWorkout component and added it to bottom of each day

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,4 +6,5 @@
 @import './SavedWorkouts';
 @import './Planner';
 @import './PlannerWorkout';
-@import './UserIcon'
+@import './UserIcon';
+@import './AddWorkout';
