--- a/src/styles/_PlannerWorkout.scss
+++ b/src/styles/_PlannerWorkout.scss
@@ -30,17 +30,17 @@
         .set-number{
             font-weight: bold;
             text-align: center;
-            width: 2.5rem;
-            color: white;
+            width: 3.5rem;
         }
         .set-details {
 
             padding: 0.2rem 0.5rem;
             margin: 0.2rem 0.1rem;
             border: 1px solid black;
+            font-weight: bold;
             border-radius: 5px;
             cursor: pointer;
-            background-color: $color-gray;
+            background-color: white;
           }
     }
 
