--- a/src/styles/_AddWorkout.scss
+++ b/src/styles/_AddWorkout.scss
@@ -13,4 +13,8 @@
     color: white;
     font-size: 1.5rem;
     font-weight: bold;
+
+    &:hover{
+        box-shadow: 0px 0px 5px 1px rgba(25,25,0,0.4);
+    }
 }
