added getYear to util/data and the year to the planner layout

--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -44,14 +44,15 @@
     }
     .time-period {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       margin: 10px;
 
-      h2{
-        padding: 10px;
+      h3{
+        border-bottom: 1px solid black;
+        margin-bottom: 1rem;
       }
     }
     .increment-arrows {
