--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -56,6 +56,14 @@ body {
     border:1px solid black;
   }
 
+  nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+
   button{
     background-color: $color-blue;
     font-weight: bold;
