--- a/src/styles/_PlannerWorkout.scss
+++ b/src/styles/_PlannerWorkout.scss
@@ -1,10 +1,15 @@
 .planner-workout {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  // border: 1px solid black;
   border-radius: 5px;
   padding: 5px;
   margin: 5px;
+  cursor: pointer;
+
+  &:hover{
+    box-shadow: 0px 0px 5px 1px rgba(25,25,0,0.4);
+  }
 
   h4 {
     padding: 0 0.5rem;
