added WorkoutForm to the app

--- a/src/styles/_AddWorkout.scss
+++ b/src/styles/_AddWorkout.scss
@@ -3,7 +3,7 @@
 .add-workout {
     display: flex;
     justify-content: center;
-    // border: 1px solid black;
+    text-align: center;
     border-radius: 5px;
     margin: 5px;
     padding: 10px;
