--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -1,35 +1,10 @@
-.past-date {
-  .planner-workouts-container {
-    opacity: 45%;
-  }
-}
-
-.current-date {
-  .planner-day-title {
-    background-color: $color-hot-pink;
-    padding: 0 10px;
-    border-radius: 15px;
-    color: white;
-  }
-  .planner-workouts-container {
-    background-color: white;
-  }
-}
-
-.future-date {
-  .planner-workouts-container {
-    background-color: white;
-  }
-}
-
 #planner {
   width: 85%;
-  border: 1px solid black;
+  // border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: scroll;
-  overflow-y: hidden;
+
   
   .planner-header {
     display: flex;
@@ -86,7 +61,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
+    // width: 100%;
+    min-width: 700px;
+    overflow: scroll;
+    overflow-y: hidden;
 
     .planner-day {
       display: flex;
@@ -105,8 +83,33 @@
 
       .planner-workouts-container {
         width: 100%;
-        border: 1px solid black;
+        box-shadow: 1px 1px 1px 1px rgba(25,25,0,0.4);
       }
     }
+  }
+}
+
+.past-date {
+  .planner-workouts-container {
+    opacity: 45%;
+    background-color: white;
+  }
+}
+
+.current-date {
+  .planner-day-title {
+    background-color: $color-hot-pink;
+    padding: 0 10px;
+    border-radius: 15px;
+    color: white;
+  }
+  .planner-workouts-container {
+    background-color: white;
+  }
+}
+
+.future-date {
+  .planner-workouts-container {
+    background-color: white;
   }
 }
