--- a/src/styles/_SavedWorkouts.scss
+++ b/src/styles/_SavedWorkouts.scss
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 15%;
+    width: 256px;
     padding: 20px;
-    border: 1px solid black;   
-
+    border-left: 1px solid gray;   
+    // background-color: white;
+    overflow: hidden;
 
 }
