--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -84,6 +84,14 @@
       .planner-workouts-container {
         width: 100%;
         box-shadow: 1px 1px 1px 1px rgba(25,25,0,0.4);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        .add-workout-btn{
+          margin: 5px 5px 0;
+        }
+
       }
     }
   }
