--- a/src/styles/_PlannerWorkout.scss
+++ b/src/styles/_PlannerWorkout.scss
@@ -1,10 +1,9 @@
 .planner-workout {
   display: flex;
   flex-direction: column;
-  // border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 7px;
   padding: 5px;
-  margin: 5px;
+  margin: 5px 5px 0;
   cursor: pointer;
 
   &:hover{
@@ -44,7 +43,7 @@
             margin: 0.2rem 0.1rem;
             border: 1px solid black;
             font-weight: bold;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
             background-color: white;
           }
