--- a/src/styles/_WorkoutForm.scss
+++ b/src/styles/_WorkoutForm.scss
@@ -1,6 +1,4 @@
-.hidden{
-    display: none
-}
+
 
 .workout-form{
     position: absolute;
@@ -9,6 +7,25 @@
     border: 1px solid black;
     border-radius: 7px;
     padding: 3rem;
+    display: flex;
+    flex-direction: column;
+
     
+
+    .wo-title{
+        margin: .5rem 0;
+    }
+
+    .wo-notes{
+        margin: .5rem 0;
+    }
+
+    .form-btns{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: .5rem 0;
+
+    }
     
 }
