--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import './reset.scss';
 @import './variables.scss';
+@import './mixins.scss';
 @import './general.scss';
 @import './_Categories.scss';
 @import './Header';
