--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -12,7 +12,6 @@ header{
     }
 
 .header-nav{
-    width: 300px;
 
     .setting-icon{
         font-size: 3rem;
@@ -21,7 +20,7 @@ header{
     }
         a {
             font-size: 2rem;
-    
+            margin: 0 2rem;
         }
 }
 
