added font awesome and a search icon

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,12 +1,13 @@
-.hidden{
-    display: none
-}
-
 .cancel{
     background-color: red;
 }
 
 .save {
 
+}
+
+.icon{
+font-size: 2rem;
+color: gray;
 }
 
