--- a/src/styles/_Planner.scss
+++ b/src/styles/_Planner.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   align-items: center;
 
+  .hidden{
+    display: none
+}
   
   .planner-header {
     display: flex;
@@ -63,14 +66,15 @@
     justify-content: center;
     // width: 100%;
     min-width: 700px;
-    overflow: scroll;
-    overflow-y: hidden;
+    // overflow: scroll;
+    // overflow-y: hidden;
 
     .planner-day {
       display: flex;
       flex-direction: column;
       align-items: center;
       width: 15%;
+
 
       .planner-day-title {
         padding: 1rem;
@@ -87,6 +91,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        // height: 100px;
+        // overflow: scroll;
+        // overflow-x: hidden;
 
         .add-workout-btn{
           margin: 5px 5px 0;
