--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,3 +17,5 @@ $color-hot-pink: #FD3972;
 $color-text: $color-black;
 $color-background: $color-white;
 $color-header: $color-hot-pink;
+
+$box-shadow-main: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
