--- a/src/styles/_WorkoutForm.scss
+++ b/src/styles/_WorkoutForm.scss
@@ -3,8 +3,8 @@
 .workout-form{
     position: absolute;
     z-index: 10;
-    background-color: white;
-    border: 1px solid black;
+    background-color: $color-white;
+    box-shadow: $box-shadow-main;
     border-radius: 7px;
     padding: 3rem;
     display: flex;
@@ -15,8 +15,30 @@
         margin: .5rem 0;
     }
 
+
     .wo-notes{
+        display: flex;
+        flex-direction: row;
         margin: .5rem 0;
+
+        .add-note-icon{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            border-radius: 5px;
+            padding: 5px;
+
+            .plus-i{
+                font-size: 1.5rem;
+            }
+
+            &:hover{
+                opacity: 50%;
+            }
+    
+        }
     }
 
     .form-btns{
