--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -15,3 +15,9 @@ padding-right: .5rem;
 .hidden{
     display: none
 }
+
+.tall-input{
+    height: 6rem;
+    text-align: left;
+    vertical-align: top;
+}
