--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,3 +19,6 @@ $color-background: $color-white;
 $color-header: $color-hot-pink;
 
 $box-shadow-main: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+$box-shadow-active: 0 0 8px #39abfd93;
+$border-main: 1px solid #dfdfe8;
+$border-active: 1px solid $color-blue;
