--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -49,15 +49,26 @@ body {
 
   }
 
-  input{
-    padding: 1rem .5rem;
-    // border-radius: 5px;
-    border: none;
-    border-bottom:1px solid black;
+  input, textarea{
+    padding: 1rem;
+    border-radius: 5px;
+    border: $border-main;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08);
+    font-family: $font-text;
+    resize: none;
+    width: 100%;
+
+    &::placeholder{
+      color: lightgray;
+      font-family: $font-text;
+    }
 
     &:focus{
       outline: none;
+      border: $border-active;
+      box-shadow: $box-shadow-active;
     }
+
   }
 
   nav{
@@ -81,7 +92,5 @@ body {
     &:hover{
       box-shadow: 1px 1px 1px 1px rgba(25,25,0,0.4);
     }
-
-
 
   }
