--- a/src/styles/__Categories.scss
+++ b/src/styles/__Categories.scss
@@ -1,15 +1,15 @@
 .cat-0{
-    background-color: lightblue;
+    background-color: $color-yellow;
 
 }
 
 .cat-1{
-    background-color: lightcyan;
+    background-color: $color-orange;
 
 }
 
 .cat-2{
-    background-color: lightcoral;
+    background-color: $color-orange;
 
 }
 
@@ -19,7 +19,7 @@
 }
 
 .cat-4{
-    background-color: lightseagreen;
+    background-color: $color-mint;
 
 }
 
