--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 @import './general.scss';
 @import './_Categories.scss';
 @import './Header';
-@import './SavedWorkouts';
+@import './WorkoutLibrary';
 @import './Planner';
 @import './PlannerWorkout';
 @import './UserIcon';
