--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,10 +2,11 @@
 @import './variables.scss';
 @import './mixins.scss';
 @import './general.scss';
-@import './_Categories.scss';
-@import './Header';
-@import './WorkoutLibrary';
-@import './Planner';
-@import './PlannerWorkout';
-@import './UserIcon';
-@import './WorkoutForm'
+@import './categories.scss';
+@import './layouts/Header';
+@import './layouts/WorkoutLibrary';
+@import './layouts/Planner';
+@import './layouts/PlannerWorkout';
+@import './layouts/UserIcon';
+@import './layouts/WorkoutForm';
+@import './views/MyPlan.scss'
