--- a/src/styles/layouts/_UserIcon.scss
+++ b/src/styles/layouts/_UserIcon.scss
@@ -1,18 +1,19 @@
 .user-icon{
     background-color: $color-blue;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 4px solid $color-white; 
     cursor: pointer;
+    margin: 0 2rem;
 
     h3{
         margin: 0 auto;
         color: $color-white;
-        font-size: 2.5rem;
+        font-size: 2rem;
 
     }
 }
