added routing with paths

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -43,7 +43,7 @@ body {
     color: inherit;
   }
 
-  input, textarea{
+  input, textarea, select{
     padding: 1rem;
     border-radius: 5px;
     border: $border-main;
