--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import './layouts/PlannerWorkout';
 @import './layouts/UserIcon';
 @import './layouts/WorkoutForm';
+@import './layouts/LoginForm';
 
 
 //views
