login header component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import './layouts/UserIcon';
 @import './layouts/WorkoutForm';
 @import './layouts/LoginForm';
+@import './layouts/LoginHeader';
 
 
 //views
