--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,9 +12,9 @@
 @import './layouts/UserIcon';
 @import './layouts/WorkoutForm';
 @import './layouts/LoginForm';
-@import './layouts/LoginHeader';
 
 
 //views
 @import './views/Login.scss';
 @import './views/MyPlan.scss';
+@import './views/CreateWorkout.scss';
