--- a/src/styles/layouts/_Header.scss
+++ b/src/styles/layouts/_Header.scss
@@ -1,30 +1,32 @@
-header{
-    color: $color-nav;
+header {
+  color: $color-nav;
+  background-color: $color-header;
+  padding: 15px 50px;
+  box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.08);
+  .header-content-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: $color-header;
-    padding:15px 30px;
-    box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.08);
+    max-width: 1350px;
+    margin: 0 auto;
 
     .header-logo {
-        color: $color-title;
-        cursor: pointer;
+      color: $color-title;
+      font-size: 3.2rem;
+      cursor: pointer;
     }
 
-.header-nav{
-
-    .setting-icon{
+    .header-nav {
+      .setting-icon {
         font-size: 3rem;
         color: white;
         cursor: pointer;
+      }
+      a {
+        font-size: 1.6rem;
+        margin: 0 2rem;
+      }
     }
-        a {
-            font-size: 2rem;
-            margin: 0 2rem;
-        }
-}
-
-
+  }
 }
