--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -43,6 +43,18 @@ body {
     color: inherit;
   }
 
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+  }
+
+  li{
+    margin: 0;
+    padding: 0;
+  }
+
   input, textarea, select{
     padding: 1rem;
     border-radius: 5px;
@@ -62,14 +74,6 @@ body {
       border: $border-active;
       box-shadow: $box-shadow-active;
     }
-
-  }
-
-  nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
 
   }
 
