--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,12 +17,16 @@ $color-gray: #E0E5E9;
 
 $color-text: $color-black;
 $color-background: $color-white;
-$color-header: $color-hot-pink;
+$color-header: linear-gradient(
+    45deg,
+    rgba(10, 35, 66, 1) 0%,
+    rgba(253, 57, 114, 1) 100%
+  );
 $color-title: $color-white;
 $color-nav: $color-white;
 $color-buttons: $color-blue;
 
-$box-shadow-main: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+$box-shadow-main: 0px 3px 5px 3px rgba(0, 0, 0, 0.08);
 $box-shadow-active: 0 0 8px #39abfd93;
 $border-main: 1px solid #dfdfe8;
 $border-active: 1px solid $color-blue;
