created Signup Form and styling (linked to Login using classes

--- a/src/styles/layouts/_Header.scss
+++ b/src/styles/layouts/_Header.scss
@@ -86,6 +86,12 @@ header {
         color: white;
         cursor: pointer;
       }
+
+      .header-btn{
+        margin: 1.5rem;
+        background: $color-background;
+        color: $color-dark-blue;
+      }
     }
   }
 }
