--- a/src/styles/layouts/_LoginForm.scss
+++ b/src/styles/layouts/_LoginForm.scss
@@ -1,7 +1,7 @@
-.login-form {
+.login-signup-form {
   background-color: rgba(0,0,0,.5);
   width: 300px;
-  margin: 200px auto;
+  margin: 150px auto;
   text-align: center;
   border-radius: 7px;
   
@@ -9,7 +9,7 @@
   h2 {
     color: white;
     padding: 1rem;
-    background-color: $color-hot-pink;
+    background: $color-header;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
   }
