--- a/src/styles/layouts/_Planner.scss
+++ b/src/styles/layouts/_Planner.scss
@@ -1,6 +1,6 @@
 #planner {
   width: 85%;
-  // border: 1px solid black;
+  border: $border-main;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +44,7 @@
         justify-content: center;
         font-size: 2rem;
         color: white;
-        background-color: $color-blue;
+        background-color: $color-dark-blue;
         padding: 7px;
         border-radius: 10px;
         margin: 2px;
