--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Bungee+Shade&family=Faster+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://use.typekit.net/arr5sdk.css");
+
 
 $font-title: 'Bungee Outline', serif;
-$font-headers: 'Poppins', serif;
-$font-text: 'Poppins', serif;
+$font-headers: "neuzeit-grotesk", sans-serif;
+$font-text: 'neuzeit-grotesk', sans-serif;
 
 $color-hot-pink: #FD3972;
 $color-blue: #39ABFD;
