--- a/src/styles/views/CreateWorkout.scss
+++ b/src/styles/views/CreateWorkout.scss
@@ -1,3 +1,20 @@
-#create-workout{
+.create-workout{
+    padding-top: 3rem;
     
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    .topline-inputs{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 1rem;
+
+        .new-wo-title{
+            width: 50%;
+        }
+    }
 }
